deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: proxypool
---
apiVersion: v1
items:
  - apiVersion: v1
    kind: Service
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: proxypool
      name: proxypool
      namespace: proxypool
    spec:
      ports:
        - name: "5555"
          port: 5555
          targetPort: 5555
      selector:
        io.kompose.service: proxypool
    status:
      loadBalancer: {}
  - apiVersion: v1
    kind: Service
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: redis
      name: redis
      namespace: proxypool
    spec:
      ports:
        - name: "6379"
          port: 6379
          targetPort: 6379
      selector:
        io.kompose.service: redis
    status:
      loadBalancer: {}
  - apiVersion: extensions/v1beta1
    kind: Deployment
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: proxypool
      name: proxypool
      namespace: proxypool
    spec:
      replicas: 1
      strategy: {}
      template:
        metadata:
          annotations:
            kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
            kompose.version: 1.20.0 ()
          creationTimestamp: null
          labels:
            io.kompose.service: proxypool
        spec:
          containers:
            - env:
                - name: REDIS_HOST
                  value: redis
              image: germey/proxypool:{TAG}
              name: proxypool
              ports:
                - containerPort: 5555
              resources: {}
          restartPolicy: Always
    status: {}
  - apiVersion: extensions/v1beta1
    kind: Deployment
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: redis
      name: redis
      namespace: proxypool
    spec:
      replicas: 1
      strategy: {}
      template:
        metadata:
          annotations:
            kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
            kompose.version: 1.20.0 ()
          creationTimestamp: null
          labels:
            io.kompose.service: redis
        spec:
          containers:
            - args:
                - redis-server
              image: redis:alpine
              name: redis
              ports:
                - containerPort: 6379
              resources: {}
          restartPolicy: Always
    status: {}
kind: List
metadata: {}
